--- a/contact.html
+++ b/contact.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-    <nav>
-        <a href="index.html">Page d'accueil</a>
-        <a href="">A propos</a>
-        <a href="">Projets</a>
-        <a href="contact.html">Contact</a>
-    </nav>
-    </header>
-
-    <h1>Nous contacter</h1>
+        <h1>Nous contacter</h1>
+        <nav>
+            <ul class="list">
+            <li><a class="home" href="index.html">Page d'accueil</a></li>
+            <li><a class="about" href="a_propos.html">À propos</a></li>
+            <li><a class="projects" href="projets.html">Projets</a></li>
+            <li><a class="contact" href="contact.html">Contact</a></li>
+        </ul>
+        </nav>
+    </header>   
 
     <form action="/submit-form" method="post">
         <label for="name">Nom :</label>
