--- a/a_propos.html
+++ b/a_propos.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP HTML</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>A Propos</h1>
 
-    <nav>
-        <a href="index.html">Page d'accueil</a>
-        <a href="a_propos.html">A propos</a>
-        <a href="projets.html">Projets</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+        <nav>
+            <ul class="list">
+            <li><a class="home" href="index.html">Page d'accueil</a></li>
+            <li><a class="about" href="a_propos.html">À propos</a></li>
+            <li><a class="projects" href="projets.html">Projets</a></li>
+            <li><a class="contact" href="contact.html">Contact</a></li>
+        </ul>
+        </nav>
     </header>
 </body>
 </html>
