--- a/article2.html
+++ b/article2.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Article 2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
 
-    <nav>
-        <a href="">Page d'accueil</a>
-        <a href="">A propos</a>
-        <a href="">Projets</a>
-        <a href="">Contact</a>
-    </nav>
+        <nav>
+            <ul class="list">
+            <li><a class="home" href="index.html">Page d'accueil</a></li>
+            <li><a class="about" href="a_propos.html">À propos</a></li>
+            <li><a class="projects" href="projets.html">Projets</a></li>
+            <li><a class="contact" href="contact.html">Contact</a></li>
+        </ul>
+        </nav>
     </header>
     <section>
     <h1>Article 2</h1>
