--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP HTML</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_mobile.css">
+    <link rel="stylesheet" href="style_tablette.css">
 </head>
 <body>
     <header>
         <h1>Blog</h1>
         <nav>
-            <a href="index.html">Page d'accueil</a>
-            <a href="a_propos.html">À propos</a>
-            <a href="projets.html">Projets</a>
-            <a href="contact.html">Contact</a>
+            <ul class="list">
+            <li><a class="home" href="index.html">Page d'accueil</a></li>
+            <li><a class="about" href="a_propos.html">À propos</a></li>
+            <li><a class="projects" href="projets.html">Projets</a></li>
+            <li><a class="contact" href="contact.html">Contact</a></li>
+        </ul>
         </nav>
     </header>
     <div>
